--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     font-family: "Outfit", "Rubik", "Roboto Flex", "Roboto", sans-serif, serif;
 }
 
+html {
+    font-size: 16px;
+}
+
 body {
     position: relative;
     background-color: #000000;
@@ -237,7 +241,7 @@ nav>ul>li>* {
     display: inline-block;
     vertical-align: middle;
     transform-origin: center center;
-    font-size: 16.25px;
+    font-size: 1.015625rem;
 }
 
 .browse img,
@@ -296,7 +300,7 @@ footer nav>ul>li>* {
 footer nav>ul>li:first-child a:first-child {
     text-decoration: none;
     color: #ffffff;
-    font-size: 14.1px;
+    font-size: 0.88125rem;
 }
 
 footer nav>ul>li:last-child a:last-child {
@@ -304,7 +308,7 @@ footer nav>ul>li:last-child a:last-child {
     font-family: "Roboto";
     font-weight: 400;
     color: #ffffff;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .downIns {
@@ -314,7 +318,7 @@ footer nav>ul>li:last-child a:last-child {
 
 .downIns a,
 .signUpAndLogin li:nth-child(1)>a {
-    font-size: 14.25px;
+    font-size: 0.89rem;
     color: var(--downInsHovColor);
 }
 
@@ -372,7 +376,7 @@ footer nav>ul>li:last-child a:last-child {
     color: white;
     align-self: center;
     padding-left: 19px;
-    font-size: 16.75px;
+    font-size: 1.046875rem;
     font-weight: 600;
 }
 
@@ -418,7 +422,7 @@ footer nav>ul>li:last-child a:last-child {
 .text1 p,
 .text2 p {
     color: white;
-    font-size: 15px;
+    font-size: 0.9375rem;
     margin-bottom: 7px;
     cursor: default;
 }
@@ -464,7 +468,7 @@ footer nav>ul>li:last-child a:last-child {
     list-style: none;
     text-decoration: none;
     color: #b3b3b3;
-    font-size: 11px;
+    font-size: 0.6875rem;
     font-family: "Roboto flex";
 }
 
@@ -473,7 +477,7 @@ footer nav>ul>li:last-child a:last-child {
     list-style: none;
     text-decoration: none;
     color: white;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-family: "Roboto flex";
 }
 
@@ -586,7 +590,7 @@ footer nav>ul>li:last-child a:last-child {
 }
 
 .songsCard>.text a:nth-child(1) {
-    font-size: 24.2px;
+    font-size: 1.5125rem;
     font-family: "Outfit";
     font-weight: 700;
     display: inline;
@@ -600,7 +604,7 @@ footer nav>ul>li:last-child a:last-child {
 .songsCard>.text a:nth-child(2) {
     font-family: "Rubik";
     font-weight: 700;
-    font-size: 13.5px;
+    font-size: 0.84rem;
     align-self: center;
     color: #b3b3b3;
     margin-right: 18px;
@@ -621,14 +625,14 @@ footer nav>ul>li:last-child a:last-child {
     text-overflow: ellipsis;
     color: #b3b3b3;
     font-family: sans-serif;
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .songsCard li>a {
     font-family: "Roboto";
     font-weight: 500;
     line-height: 1.4;
-    font-size: 16px;
+    font-size: 1rem;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -640,7 +644,7 @@ footer nav>ul>li:last-child a:last-child {
 
 .songsCard span a {
     font-family: "Roboto";
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 500;
     color: #b3b3b3;
     align-self: flex-start;
@@ -758,7 +762,7 @@ nav ul button {
 nav ul button a {
     text-decoration: none;
     color: black;
-    font-size: 16px;
+    font-size: 1rem;
     display: inline-block;
 }
 
@@ -971,7 +975,7 @@ header .second:hover {
 
     header li:nth-child(4) a,
     .downIns a {
-        font-size: 16.25px;
+        font-size: 1.016rem;
     }
 
     .signUpAndLogin {
@@ -1204,7 +1208,7 @@ header .second:hover {
 
     .songsCard>.text a:nth-child(1) {
         font-weight: 500;
-        font-size: 16px;
+        font-size: 1.55rem;
         padding: 5px 0px;
     }
 
@@ -1219,13 +1223,13 @@ header .second:hover {
     }
 
     .songsCard li>a {
-        font-size: 11px;
+        font-size: 0.75rem;
         font-weight: unset;
         margin-left: 3px;
     }
 
     .songsCard span {
-        font-size: 11px;
+        font-size: 0.6875rem;
     }
 
     .subCategories>section:nth-child(1)>ul,
