--- a/style.css
+++ b/style.css
@@ -39,6 +39,14 @@ body * {
     user-select: none;
 }
 
+img {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    pointer-events: none;
+}
+
 main footer * {
     user-select: text;
 }
@@ -873,6 +881,77 @@ header .second:hover {
     display: none;
 }
 
+@media screen and (min-width: 1374px) {
+    header {
+        display: flex;
+        width: 100%;
+        height: 48px;
+        background-color: black;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    header .first {
+        align-items: end;
+    }
+
+    main {
+        gap: 8px;
+    }
+
+    .left {
+        width: 482px;
+    }
+
+    .right {
+        width: 100%;
+    }
+
+    .subCategories {
+        width: 95%;
+        margin: auto;
+        gap: 15px;
+    }
+
+    main footer ul {
+        justify-content: space-between;
+        margin: 0px 10px 15px 35px;
+    }
+
+    main footer ul:nth-child(2) {
+        width: 97%;
+    }
+
+    .cardContainer {
+        gap: 8px;
+    }
+
+    .songsCard:first-child {
+        background: #121212;
+    }
+
+    .songsCard ul {
+        flex-wrap: wrap;
+    }
+
+    .songsCard li {
+        width: 176px;
+    }
+
+    .signUpAndLogin {
+        flex-direction: row-reverse;
+    }
+
+    form input {
+        width: 20.7vw;
+    }
+
+    .resizer {
+        display: none;
+    }
+
+}
+
 @media screen and (max-width: 1102px) {
 
     body {
@@ -1006,77 +1085,6 @@ header .second:hover {
     .resizer {
         display: none;
     }
-}
-
-@media screen and (min-width: 1374px) {
-    header {
-        display: flex;
-        width: 100%;
-        height: 48px;
-        background-color: black;
-        justify-content: space-around;
-        align-items: center;
-    }
-
-    header .first {
-        align-items: end;
-    }
-
-    main {
-        gap: 8px;
-    }
-
-    .left {
-        width: 482px;
-    }
-
-    .right {
-        width: 100%;
-    }
-
-    .subCategories {
-        width: 95%;
-        margin: auto;
-        gap: 15px;
-    }
-
-    main footer ul {
-        justify-content: space-between;
-        margin: 0px 10px 15px 35px;
-    }
-
-    main footer ul:nth-child(2) {
-        width: 97%;
-    }
-
-    .cardContainer {
-        gap: 8px;
-    }
-
-    .songsCard:first-child {
-        background: #121212;
-    }
-
-    .songsCard ul {
-        flex-wrap: wrap;
-    }
-
-    .songsCard li {
-        width: 176px;
-    }
-
-    .signUpAndLogin {
-        flex-direction: row-reverse;
-    }
-
-    form input {
-        width: 20.7vw;
-    }
-
-    .resizer {
-        display: none;
-    }
-
 }
 
 @media screen and (max-width: 575px) {
