--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 
 html {
+    width: 100vw;height: 100vh;
     font-size: 16px;
     overflow: hidden;
 }
@@ -39,7 +40,7 @@ body * {
     user-select: none;
 }
 
-img {
+.songsCard img {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -956,7 +957,7 @@ header .second:hover {
 
     body {
         height: 100vh;
-        overflow-y: hidden;
+        overflow: hidden;
     }
 
     header {
@@ -1073,6 +1074,24 @@ header .second:hover {
 
     .socialLinks {
         display: flex;
+    }
+
+    .hamburger img:first-child, .hamburger .right img:nth-child(1) {
+        display: block;
+    }
+
+    .hamburger .right img:nth-child(1) {
+filter: brightness(10);
+     }
+
+    .hamburger .right button {
+        display: block;
+        width: 90px;
+        padding: 6px 6px 6.75px 6px;
+        border: none;
+        border-radius: 25px;
+        font-family: system-ui;
+        font-weight: 600;
     }
 
     .second form,
@@ -1258,7 +1277,7 @@ header .second:hover {
     }
 
     .subCategories {
-        gap: 10px;
+        gap: 20px;
     }
 
     .langIcon button {
@@ -1330,15 +1349,6 @@ header .second:hover {
         border-top: 2px solid white;
         width: 15px;
         margin: 30px 0 10px 0;
-    }
-
-    .hamburger .right button {
-        width: 90px;
-        padding: 6px;
-        border: none;
-        border-radius: 25px;
-        font-family: system-ui;
-        font-weight: 600;
     }
 
     .hamburger .right img:first-child {
